# digitalforge

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/apps/accounts/: admin.py  signals.py  tasks.py
backend/apps/accounts/api/: profile_urls.py  urls.py
backend/apps/accounts/migrations/: 0001_initial.py
backend/apps/accounts/models/: __init__.py  email_verification.py  profile.py  user.py
backend/apps/accounts/services/: __init__.py  email_verification.py  registration.py
backend/apps/accounts/tests/: test_auth_api.py
backend/apps/audit/: admin.py
backend/apps/audit/migrations/: 0001_initial.py
backend/apps/audit/models/: audit_log.py
backend/apps/audit/services/: __init__.py
backend/apps/audit/tests/: test_audit_logs.py
backend/apps/catalog/: admin.py  permissions.py
backend/apps/catalog/api/: seller_urls.py  urls.py
backend/apps/catalog/migrations/: 0001_initial.py  0002_category_description_category_sort_order_and_more.py
backend/apps/common/: choices.py
backend/apps/common/db/: models.py
backend/apps/complaints/: admin.py  apps.py
backend/apps/files/: admin.py
backend/apps/moderation/: admin.py  permissions.py
backend/apps/notifications/: admin.py  models.py
backend/apps/orders/: admin.py
backend/apps/payments/: admin.py
backend/config/: celery.py  urls.py
backend/config/settings/: base.py  docker.py  local.py  production.py
backend/requirements/: base.txt  local.txt  production.txt
backend/scripts/: start_web.sh  start_worker.sh  wait_for_db.py
(+123 files in other folders)
